[project]
name = "just-d4rl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fuyutarow", email = "fuyutarow@gmail.com" }
]
dependencies = [
    "h5py>=3.11.0",
    "tqdm>=4.66.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/just_d4rl"]
